--- a/index.html
+++ b/index.html
@@ -1,6 +1,45 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Shaik Afrid",
+  "alternateName": "afriddev",
+  "jobTitle": "Software Engineer",
+  "url": "https://afrid.live",
+  "sameAs": [
+    "https://github.com/afriddev",
+    "https://www.linkedin.com/in/afriddev/",
+    "https://www.npmjs.com/package/@afriddev/emailservice",
+    "https://pub.dev/packages/email_sender"
+  ],
+  "worksFor": {
+    "@type": "Organization",
+    "name": "RailTel Corporation of India Ltd."
+  },
+  "alumniOf": [
+    {
+      "@type": "CollegeOrUniversity",
+      "name": "Lakireddy Balireddy College of Engineering"
+    },
+    {
+      "@type": "CollegeOrUniversity",
+      "name": "A A N M & V V R S R Polytechnic"
+    }
+  ],
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Hyderabad",
+    "postalCode": "500008",
+    "addressCountry": "IN"
+  },
+  "email": "afridayan01@gmail.com",
+  "telephone": "+91 9390558027"
+}
+</script>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
